# gtk_cpp

./: .gitignore  compile_commands.json  main.cpp  main_server.cpp  meson.build  protocol.md
include/: chat_client.h  chat_server.h  main_window.h  message.h
